HV-1640 Add --add-modules=java.se for WildFly tools
This is necessary for JDK 11 build 22 due to
https://issues.jboss.org/browse/MODULES-372.

Hopefully, we will be able to remove this option later.